--- a/app.json
+++ b/app.json
@@ -1,9 +1,10 @@
 {
   "expo": {
-    "name": "testbarcodereader",
+    "name": "TestBarcodeReader",
     "slug": "testbarcodereader",
     "version": "1.0.0",
     "orientation": "portrait",
+    "owner": "carminoplata",
     "icon": "./assets/icon.png",
     "userInterfaceStyle": "light",
     "splash": {
